@@ -1,10 +1,10 @@
-/*	$NetBSD: main.c,v 1.23 2020/07/06 23:31:36 jmcneill Exp $	*/
+/*	$NetBSD: main.c,v 1.24 2020/10/15 02:19:23 mrg Exp $	*/
 
 /*	$eterna: main.c,v 1.6 2011/11/18 09:21:15 mrg Exp $	*/
 /* from: eterna: bozohttpd.c,v 1.159 2009/05/23 02:14:30 mrg Exp 	*/
 
 /*
- * Copyright (c) 1997-2018 Matthew R. Green
+ * Copyright (c) 1997-2020 Matthew R. Green
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
